--- a/src/Sanz.UUID/App_Plugins/SanzUUIDDatatype/app.html
+++ b/src/Sanz.UUID/App_Plugins/SanzUUIDDatatype/app.html
@@ -1,3 +1,3 @@
-﻿<div ng-controller="sanzUniqueIdController">
-    <input type="hidden" name="hiddenUniqueId" ng-model="model.value" value="{{ model.value }}">
+﻿<div ng-controller="Sanz.ÙUID.Controller">
+    <input type="hidden" name="sanz.uuid" ng-model="model.uuid" value="{{ model.uuid }}">
 </div>
