--- a/src/Sanz.UUIDDatatype/App_Plugins/SanzUUIDDatatype/app.html
+++ b/src/Sanz.UUIDDatatype/App_Plugins/SanzUUIDDatatype/app.html
@@ -1,3 +1,3 @@
 ﻿<div ng-controller="sanzUniqueIdController">
-    <input type="hidden" name="hiddenUUID" ng-model="model.uuid" value="{{ model.value }}">
+    <input type="hidden" name="hiddenUUID" ng-model="model.value" value="{{ model.value }}">
 </div>
